fix(eighth): don't show horizontal scrollbar on schedule activity page

--- a/intranet/static/css/eighth.schedule.scss
+++ b/intranet/static/css/eighth.schedule.scss
@@ -17,7 +17,7 @@ tr.scheduled .block-name {
 
 .schedule-activity-page.floating {
     form.schedule-form {
-        overflow-x: scroll;
+        overflow-x: auto;
         position: absolute; // quick fix to display scrollbar at bottom
     }
 
